force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__Chassis__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Chassis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CHASSIS ID</label>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipLabel>ROUTE (CHASSIS)</relationshipLabel>
    <relationshipName>RouteChassis</relationshipName>
    <type>Lookup</type>
</CustomField>