force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__MaxTEU__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MaxTEU__c</fullName>
    <formula>clofor_com_cfs__Truck__r.clofor_com_cfs__TEU__c</formula>
    <label>Max TEU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>