force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__NumberOfAssignment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberOfAssignment__c</fullName>
    <label>NUMBER OF ASSIGNMENT</label>
    <summaryForeignKey>clofor_com_cfs__LoadingLocation__c.clofor_com_cfs__Route__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>