force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__POL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__POL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P.O.L</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>ROUTE (P.O.L)</relationshipLabel>
    <relationshipName>RoutePOL</relationshipName>
    <type>Lookup</type>
</CustomField>