force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__RoutingDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RoutingDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>ROUTING START DATE</label>
    <required>true</required>
    <type>Date</type>
</CustomField>