force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__RoutingEndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RoutingEndDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>ROUTING END DATE</label>
    <type>Date</type>
</CustomField>