force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__StartTime__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__StartTime__c</fullName>
    <label>START TIME</label>
    <type>DateTime</type>
</CustomField>