force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__TotalEstimatedFuelConsumption__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalEstimatedFuelConsumption__c</fullName>
    <formula>clofor_com_cfs__TotalDistanceKM__c / clofor_com_cfs__Truck__r.clofor_com_cfs__EstimatedKMPerLitre__c</formula>
    <label>TOTAL ESTIMATED FUEL CONSUMPTION(LITER)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>