force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__TotalWeightKG__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalWeightKG__c</fullName>
    <label>TOTAL WEIGHT(KG)</label>
    <summarizedField>clofor_com_cfs__LoadingLocation__c.clofor_com_cfs__CargoWeight__c</summarizedField>
    <summaryForeignKey>clofor_com_cfs__LoadingLocation__c.clofor_com_cfs__Route__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>