force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__TransitPort1__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransitPort1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port-1</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>ROUTE (TRANSIT PORT-1)</relationshipLabel>
    <relationshipName>TransitPort1</relationshipName>
    <type>Lookup</type>
</CustomField>