force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__TransitPort2__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TransitPort2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transit Port-2</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipLabel>ROUTE (TRANSIT PORT-2)</relationshipLabel>
    <relationshipName>TransitPort2</relationshipName>
    <type>Lookup</type>
</CustomField>