force-app/main/default/objects/clofor_com_cfs__Route__c/fields/clofor_com_cfs__Truck__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Truck__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCK ID</label>
    <referenceTo>clofor_com_cfs__TruckFleet__c</referenceTo>
    <relationshipLabel>ROUTE (TRUCK)</relationshipLabel>
    <relationshipName>RouteTruck</relationshipName>
    <type>Lookup</type>
</CustomField>