force-app/main/default/objects/clofor_com_cfs__Route__c/recordTypes/clofor_com_cfs__Truck.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__Truck</fullName>
    <active>true</active>
    <label>Truck</label>
</RecordType>