force-app/main/default/objects/clofor_com_cfs__Route__c/validationRules/clofor_com_cfs__TRUCK_REQUIRED.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__TRUCK_REQUIRED</fullName>
    <active>true</active>
    <description>TRUCK FLEET is required for ROUTE/LOAD</description>
    <errorConditionFormula>ISBLANK(clofor_com_cfs__Truck__c)</errorConditionFormula>
    <errorDisplayField>clofor_com_cfs__Truck__c</errorDisplayField>
    <errorMessage>TRUCK is required for ROUTE/LOAD</errorMessage>
</ValidationRule>