force-app/main/default/objects/clofor_com_cfs__Route__c/listViews/clofor_com_cfs__ROUTE_TODAY.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__ROUTE_TODAY</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Truck__c</columns>
    <columns>clofor_com_cfs__Chassis__c</columns>
    <columns>clofor_com_cfs__RoutingDate__c</columns>
    <columns>clofor_com_cfs__RoutingEndDate__c</columns>
    <columns>clofor_com_cfs__Delivery__c</columns>
    <columns>clofor_com_cfs__Driver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__RoutingDate__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>ROUTE-TODAY</label>
    <language>en_US</language>
</ListView>