force-app/main/default/objects/clofor_com_cfs__Route__c/listViews/clofor_com_cfs__RouteAll.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__RouteAll</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>clofor_com_cfs__Driver__c</columns>
    <columns>clofor_com_cfs__Truck__c</columns>
    <columns>clofor_com_cfs__Delivery__c</columns>
    <columns>clofor_com_cfs__DeliveryStatus__c</columns>
    <columns>clofor_com_cfs__StartTime__c</columns>
    <columns>clofor_com_cfs__EndTime__c</columns>
    <columns>clofor_com_cfs__POL__c</columns>
    <columns>clofor_com_cfs__POD__c</columns>
    <columns>clofor_com_cfs__RoutingEndDate__c</columns>
    <columns>clofor_com_cfs__RoutingDate__c</columns>
    <columns>clofor_com_cfs__TotalCargoMeasurement__c</columns>
    <columns>clofor_com_cfs__TotalDistanceKM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>