force-app/main/default/objects/clofor_com_cfs__Route__c/listViews/clofor_com_cfs__RouteInPlan.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__RouteInPlan</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__Truck__c</columns>
    <columns>clofor_com_cfs__DeliveryStatus__c</columns>
    <columns>clofor_com_cfs__POD__c</columns>
    <columns>clofor_com_cfs__POL__c</columns>
    <columns>clofor_com_cfs__RoutingDate__c</columns>
    <columns>clofor_com_cfs__RoutingEndDate__c</columns>
    <columns>clofor_com_cfs__Driver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clofor_com_cfs__DeliveryStatus__c</field>
        <operation>equals</operation>
        <value>Planned</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>clofor_com_cfs__Route__c.clofor_com_cfs__Vessel</value>
    </filters>
    <label>Route in Plan</label>
</ListView>